k8s-lab/0-bootstrap/gitea/manifests/1-manifest/apps_v1-deployment-gitea-gitea-memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"labels":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"memcached","helm.sh/chart":"memcached-6.3.14"},"name":"gitea-memcached","namespace":"gitea"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/name":"memcached"}},"strategy":{"rollingUpdate":{},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app.kubernetes.io/ [...]
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: memcached
    helm.sh/chart: memcached-6.3.14
  name: gitea-memcached
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: memcached
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: memcached
        helm.sh/chart: memcached-6.3.14
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: gitea
                  app.kubernetes.io/name: memcached
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MEMCACHED_PORT_NUMBER
          value: "11211"
        image: docker.io/bitnami/memcached:1.6.19-debian-11-r7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: memcache
          timeoutSeconds: 5
        name: memcached
        ports:
        - containerPort: 11211
          name: memcache
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: memcache
          timeoutSeconds: 3
        resources:
          limits: {}
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      volumes:
      - emptyDir: {}
        name: tmp
