k8s-lab/0-bootstrap/gitea/manifests/1-manifest/apps_v1-statefulset-gitea-gitea.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"labels":{"app":"gitea","app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"gitea","app.kubernetes.io/version":"1.19.3","helm.sh/chart":"gitea-8.3.0","version":"1.19.3"},"name":"gitea","namespace":"gitea"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/name":"gitea"}},"serviceName":"gitea","template":{"metadata":{"annotations": [...]
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.19.3
    helm.sh/chart: gitea-8.3.0
    version: 1.19.3
  name: gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: gitea
  serviceName: gitea
  template:
    metadata:
      annotations:
        checksum/config: b7198e32b46fd100105959fed5ec3d8d612a845b7a2deaf5b384d031dd807095
      labels:
        app: gitea
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: gitea
        app.kubernetes.io/version: 1.19.3
        helm.sh/chart: gitea-8.3.0
        version: 1.19.3
    spec:
      containers:
      - env:
        - name: SSH_LISTEN_PORT
          value: "22"
        - name: SSH_PORT
          value: "22"
        - name: SSH_LOG_LEVEL
          value: INFO
        - name: GITEA_APP_INI
          value: /data/gitea/conf/app.ini
        - name: GITEA_CUSTOM
          value: /data/gitea
        - name: GITEA_WORK_DIR
          value: /data
        - name: GITEA_TEMP
          value: /tmp/gitea
        - name: TMPDIR
          value: /tmp/gitea
        image: gitea/gitea:1.19.3
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        name: gitea
        ports:
        - containerPort: 22
          name: ssh
        - containerPort: 3000
          name: http
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /tmp
          name: temp
        - mountPath: /data
          name: data
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      volumes:
      - name: init
        secret:
          defaultMode: 110
          secretName: gitea-init
      - name: config
        secret:
          defaultMode: 110
          secretName: gitea
      - name: inline-config-sources
        secret:
          secretName: gitea-inline-config
      - emptyDir: {}
        name: temp
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
