k8s-lab/0-bootstrap/gitea/manifests/1-manifest/v1-service-gitea-gitea-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"gitea","app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"gitea","app.kubernetes.io/version":"1.19.3","helm.sh/chart":"gitea-8.3.0","version":"1.19.3"},"name":"gitea-http","namespace":"gitea"},"spec":{"clusterIP":"None","ports":[{"name":"http","port":3000,"targetPort":3000}],"selector":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/name":"gitea"}," [...]
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.19.3
    helm.sh/chart: gitea-8.3.0
    version: 1.19.3
  name: gitea-http
  namespace: gitea
spec:
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  type: ClusterIP
