k8s-lab/0-bootstrap/gitea/manifests/1-manifest/v1-service-gitea-gitea-memcached.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"memcached","helm.sh/chart":"memcached-6.3.14"},"name":"gitea-memcached","namespace":"gitea"},"spec":{"ports":[{"name":"memcache","port":11211,"targetPort":"memcache"}],"selector":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/name":"memcached"},"sessionAffinity":"None","type":"ClusterIP"}}
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: memcached
    helm.sh/chart: memcached-6.3.14
  name: gitea-memcached
  namespace: gitea
spec:
  ports:
  - name: memcache
    port: 11211
    targetPort: memcache
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: memcached
  sessionAffinity: None
  type: ClusterIP
