k8s-lab/0-bootstrap/gitea/manifests/1-manifest/v1-service-gitea-gitea-postgresql-hl.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"primary","app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"postgresql","helm.sh/chart":"postgresql-12.4.1","service.alpha.kubernetes.io/tolerate-unready-endpoints":"true"},"name":"gitea-postgresql-hl","namespace":"gitea"},"spec":{"clusterIP":"None","ports":[{"name":"tcp-postgresql","port":5432,"targetPort":"tcp-postgresql"}],"publishNotReadyAddresses [...]
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.4.1
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: gitea-postgresql-hl
  namespace: gitea
spec:
  clusterIP: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: postgresql
  type: ClusterIP
