k8s-lab/0-bootstrap/gitea/manifests/1-manifest/v1-service-gitea-gitea-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"labels":{"app.kubernetes.io/component":"primary","app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"postgresql","helm.sh/chart":"postgresql-12.4.1"},"name":"gitea-postgresql","namespace":"gitea"},"spec":{"ports":[{"name":"tcp-postgresql","port":5432,"targetPort":"tcp-postgresql"}],"selector":{"app.kubernetes.io/component":"primary","app.kubernetes.io/instance":"gitea","app.kubernetes.io/nam [...]
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.4.1
  name: gitea-postgresql
  namespace: gitea
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
