k8s-lab/0-bootstrap/gitea/manifests/1-manifest/v1-service-gitea-gitea-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"gitea","app.kubernetes.io/instance":"gitea","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"gitea","app.kubernetes.io/version":"1.19.3","helm.sh/chart":"gitea-8.3.0","version":"1.19.3"},"name":"gitea-ssh","namespace":"gitea"},"spec":{"clusterIP":"None","ports":[{"name":"ssh","port":22,"protocol":"TCP","targetPort":22}],"selector":{"app.kubernetes.io/instance":"gitea","app.kubernetes.io/name" [...]
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: gitea
    app.kubernetes.io/version: 1.19.3
    helm.sh/chart: gitea-8.3.0
    version: 1.19.3
  name: gitea-ssh
  namespace: gitea
spec:
  clusterIP: None
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  type: ClusterIP
