k8s-lab/0-bootstrap/gitea/manifests/1-manifest/networking.istio.io_v1beta1-virtualservice-gitea-gitea.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"gitea","namespace":"gitea"},"spec":{"gateways":["istio-gateway/istio-gateway"],"hosts":["*"],"http":[{"match":[{"uri":{"prefix":"/gitea/"}}],"name":"http","rewrite":{"uri":"/"},"route":[{"destination":{"host":"gitea-http.gitea.svc.cluster.local","port":{"number":3000}}}]}],"tcp":[{"match":[{"port":22}],"route":[{"destination":{"host":"gitea-ssh.gitea.sv [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: gitea
  namespace: gitea
spec:
  gateways:
  - istio-gateway/istio-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /gitea/
    name: http
    rewrite:
      uri: /
    route:
    - destination:
        host: gitea-http.gitea.svc.cluster.local
        port:
          number: 3000
  tcp:
  - match:
    - port: 22
    route:
    - destination:
        host: gitea-ssh.gitea.svc.cluster.local
        port:
          number: 22
